	not found, use the default section.

2005-05-03  Martin Baulig  <martin@ximian.com>

	* expression.cs (ArrayAccess.EmitGetLength): New public method.

	* statement.cs (Foreach.ArrayForeach): New nested class.
	(Foreach.TemporaryVariable): New nested class.
	(Foreach.EmitArrayForeach): Removed; this is now in the new
	ArrayForeach class.

2005-05-03  Raja R Harinath  <rharinath@novell.com>

	* typemanager.cs (IsOverride, RegisterNonOverride): New.
	* decl.cs (MemberCache.AddMethod): Register "non-override" methods
	that used to trigger warning -28.  Remove warning -28.
	* expression.cs (Invocation.OverloadResolve): Use
	TypeManager.IsOverride to distinguish override methods.

	Fix #74773.
	* pending.cs (VerifyPendingMethods): If a base type implements the
	requested interface, don't bother checking individual methods of
	the base type.  As a side-effect, this prevents the creation of
	unnecessary proxies.

2005-05-02  Martin Baulig  <martin@ximian.com>

	Fix #70182.

	* flowanalysis.cs (FlowBranching.UsageVector.MergeJumpOrigins):
	Also `And' the locals if the old vector is null.
	(FlowBranching.UsageVector.BitVector.And): Allow `vector' being
	null; in this case we basically reset all the variables.	

2005-05-02  Martin Baulig  <martin@ximian.com>

	Fix #74529.

	* flowanalysis.cs (FlowBranching.UsageVector.MergeBreakOrigins):
	Added `FlowBranching branching' argument; always `and' the
	variables instead of `or'ing them unless we're an infinite loop.

	* statement.cs (While.Resolve): Create a new sibling unless we're
	infinite.	

2005-05-02  Martin Baulig  <martin@ximian.com>

	Fix #70140.

	* class.cs (ConstructorInitializer.Resolve): Added `Block block'
	arguments; use it instead of creating a new TopLevelBlock.
	(Constructor.Emit): Call `block.ResolveMeta ()' before resolving
	our ConstructorInitializer.

	* statement.cs
	(TopLevelBlock.TopLevelBranching): New public property.
	(TopLevelBlock.ResolveMeta): New public method; call ResolveMeta()